--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Currency App</string>
 
     <string name="toolbar_title">Rates</string>
+    <string name="currency_error">Unable to retrieve currencies, please try again</string>
 </resources>
