--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Currency App</string>
+    <string name="app_name">Rates</string>
 
-    <string name="toolbar_title">Rates</string>
     <string name="currency_error">Unable to retrieve currencies, please try again</string>
     <string name="currency_connection_error">Unable to retrieve currencies, please check your connection</string>
 </resources>
